Stop buttons from rounding on iOS

--- a/src/components/collapsible-button.css
+++ b/src/components/collapsible-button.css
@@ -15,6 +15,8 @@
     align-items: center;
     padding: 1rem;
     flex-wrap: nowrap;
+    -webkit-appearance: none;
+    border-radius: 0,
 }
 
 .image-and-title {
